--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==3.0.2
-twilio==9.0.1
-requests==2.31.0
-langdetect==1.0.9
-python-dotenv==1.0.1
+Flask>=2.0
+twilio>=8.0
+requests>=2.0
+pydub>=0.25.1
+langdetect>=1.0.9
+python-dotenv>=1.1.1
