--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask>=2.0
-twilio>=8.0
-requests>=2.0
-pydub>=0.25.1
-langdetect>=1.0.9
-python-dotenv>=1.1.1
-audioop-lts>=0.1
+Flask
+twilio
+openai
+pydub
+requests
